@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.40">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.41">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -24,10 +24,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.40 [20230302]:
-- Improved Teritary Sort Preferences setting
-- Added Subs Teritary Sort Preferences
-- Renamed Filter Sub and Dubs
+Changelog 0.3.41 [20230303]:
+- Renamed Preferred Source
     </news>
   </extension>
 </addon>
