@@ -1,3 +1,6 @@
+Changelog 0.3.41 [20230303]:
+- Renamed Preferred Source
+
 Changelog 0.3.40 [20230302]:
 - Improved Teritary Sort Preferences setting
 - Added Subs Teritary Sort Preferences
